name:                landcraft
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nicball/landcraft#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Ballard
maintainer:          znhihgiasy@gmail.com
copyright:           reserved
category:            hobby
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable landcraft
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  extensions:          GADTs, KindSignatures, DeriveGeneric
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , containers
