cabal-version: >=1.10
name: landcraft
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: reserved
maintainer: znhihgiasy@gmail.com
author: Nick Ballard
homepage: https://github.com/nicball/landcraft#readme
category: hobby
build-type: Simple
extra-source-files:
    README.md

executable landcraft
    main-is: Main.hs
    other-modules: Model, Network, Server, Client, Config, Render, Util
    hs-source-dirs: src
    default-language: Haskell2010
    extensions: GADTs KindSignatures DeriveGeneric QuasiQuotes
    build-depends: base >=4.7 && <5
                 , binary -any
                 , bytestring -any
                 , containers -any
                 , network -any
                 , random -any
                 , raw-strings-qq -any
                 , OpenGL -any
                 , GLUT -any
                 , clock -any
